css/_work.scss
//
// Work Styles
//
// ==========================================================================

.work {
  .gallery {
    position: relative;
    height: (160px * 2) + 16px; // = item-height (x2) + item's margin-bottom
    width: span(16 of 18);
    margin-left: span(1 of 18) + gutter(1 of 18);
    margin-bottom: 16px;
    overflow: hidden;
    // background: rgba(#F0E, 0.05);

    @include breakpoint($bp-landscape) {
      @include full;
      height: 160px + 18px; // = item-height + item's margin-bottom
      margin-bottom: 18px;
    }

    @include breakpoint($bp-tablet) {
      height: (176px * 3) + (18px * 2); // = item-height (x3) + item's margin-bottom (x2)
      margin-bottom: 26px;
    }

    @include breakpoint($bp-medium) {
      height: (152px * 2) + 15px; // = item-height (x2) + item's margin-bottom
    }

    @include breakpoint($bp-default) {
      height: (160px * 2) + 18px; // = item-height (x2) + item's margin-bottom
    }

    @include breakpoint($bp-large) {
      height: (172px *3) + (18px * 2) // = item-height (x3) + item's margin-bottom (x2)
    }

    .slider {
      position: absolute;
      top: 0;
      left: 0;
      display: block;
      height: 2000px;
      width: 100%;

    }

    .tile {
      float: left;
      height: 160px;
      width: 100%;
      margin-bottom: 16px;
      background-color: #E6E6E6;
      background-position: center center;
      background-repeat: no-repeat;
      border-radius: $default-radius;

      &:hover {
        background-color: #FFF;
        box-shadow: inset 0px 0 30px rgba(#000, 0.1);
        border: inset 1px rgba(#000, 0.05);
        cursor: pointer;
      }

      &.target {
        background-image: url('../img/projects/target/logo-gray.svg');
        background-size: 96px;

        &:hover {
          background-image: url('../img/projects/target/logo.svg');
        }
      }

      &.ge {
        background-image: url('../img/projects/ge/logo-gray.svg');
        background-size: 96px;

        &:hover {
          background-image: url('../img/projects/ge/logo.svg');
        }
      }

      &.tsi {
        background-image: url('../img/projects/360i/logo-gray.svg');
        background-size: 106px;

        &:hover {
          background-image: url('../img/projects/360i/logo.svg');
        }
      }

      &.crown {
        background-image: url('../img/projects/crown/logo-gray.svg');
        background-size: 116px;

        &:hover {
          background-image: url('../img/projects/crown/logo.svg');
        }
      }

      &.kraft {
        background-image: url('../img/projects/kraft/logo-gray.svg');
        background-size: 160px;

        &:hover {
          background-image: url('../img/projects/kraft/logo.svg');
        }
      }

      &.oscarmayer {
        background-image: url('../img/projects/oscarmayer/logo-gray.svg');
        background-size: 120px;

        &:hover {
          background-image: url('../img/projects/oscarmayer/logo.svg');
        }
      }

      &.yourcare {
        background-image: url('../img/projects/yourcare/logo-gray.svg');
        background-size: 198px;

        &:hover {
          background-image: url('../img/projects/yourcare/logo.svg');
        }
      }

      &.redcats {
        background-image: url('../img/projects/redcats/logo-gray.svg');
        background-size: 196px;

        &:hover {
          background-image: url('../img/projects/redcats/logo.svg');
        }
      }

      &.nylearns {
        background-image: url('../img/projects/nylearns/logo-gray.svg');
        background-size: 206px;

        &:hover {
          background-image: url('../img/projects/nylearns/logo.svg');
        }
      }

      @include breakpoint($bp-landscape) {
        @include span(6.9 of 14);
        height: 176px;
        margin-bottom: 18px;

        &:nth-of-type(even) {
          @include span(last 6.9 of 14);
        }
      }

      /* @include breakpoint($bp-tablet) {
        margin-bottom: 16px;
      } */

      @include breakpoint($bp-medium) {
        @include span(5.9 of 18);
        height: 152px;
        margin-right: span(1 of 41);
        margin-bottom: 15px;

        &:nth-of-type(even) {
          @include span(5.9 of 18);
          margin-right: span(1 of 41);
        }

        &:nth-child(3n) {
          margin-right: 0;
        }
      }

      @include breakpoint($bp-default) {
        width: 32%;
        height: 160px;
        margin-right: 2%;
        margin-bottom: 18px;

        &:nth-of-type(even) {
          width: 32%;
          margin-right: 2%;
        }

        &:nth-child(3n) {
          margin-right: 0;
        }
      }

      @include breakpoint($bp-large) {
        height: 172px;
      }
    }
  }

  .pagination {
    width: span(16 of 18);
    margin-left: span(1 of 18) + gutter(1 of 18);
    text-align: center;

    a {
      position: relative;
      display: inline-block;
      height: 16px;
      width: 16px;
      margin-right: 14px;
      border-radius: 50%;
      background: #CCC;

      &:last-of-type {
        margin-right: 0;
      }

      &.active span {
        position: absolute;
        top: 2px;
        left: 2px;
        display: inline-block;
        height: 12px;
        width: 12px;
        border-radius: 50%;
        background: #F2F2F2;
      }
    }
  }
}

